# arpack-ng

./: Cargo.toml  Readme.md
examples/: closure.rs  simple.rs
src/: lib.rs  nalgebra.rs  ndarray.rs
