[package]
name = "arpack-ng"
version = "0.1.1-alpha.1"
authors = ["Daniel Hauck <mail@dhauck.eu>"]
edition = "2018"
description = "Save interface to arpack-ng-sys"
homepage = "https://gitlab.com/solidtux-rust/arpack-ng"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["openblas"]
openblas = ["blas-src/openblas", "lapack-src/openblas"]
intel-mkl = ["blas-src/intel-mkl", "lapack-src/intel-mkl"]
netlib = ["blas-src/netlib", "lapack-src/netlib"]
accelerate = ["blas-src/accelerate", "lapack-src/accelerate"]

[dependencies]
arpack-ng-sys = "0.1.3-alpha.0"
num-complex = "0.3"
ndarray = "0.13"
num-traits = "0.2"
blas-src = "0.6"
lapack-src = "0.6"
lazy_static = "1.4"

[dev-dependencies]
openblas-src = { version = "0.9", features = ["system", "cblas"] }
